--- a/Upnp.Control.Web/ClientApp/src/styles/_spoiler.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_spoiler.scss
@@ -14,7 +14,6 @@ $spoiler-padding-y: $input-btn-padding-y !default;
     --#{$prefix}spoiler-padding-y: #{$spoiler-padding-y};
     --#{$prefix}spoiler-animation-duration: var(--#{$animation-prefix}duration-1);
 
-    overflow: hidden;
     @include border-radius(var(--#{$prefix}spoiler-border-radius));
     border: var(--#{$prefix}spoiler-border-width) solid var(--#{$prefix}spoiler-border-color);
 
